# Robot-Grader

./: .gitignore  pyproject.toml  requirements.txt
config/: default.yaml
config/fruit_profiles/: grapefruit.yaml  lemon.yaml  nectarine.yaml  orange.yaml  peach.yaml  plum.yaml
scripts/: calibrate_camera.py  calibrate_joints.py  collect_training_data.py  jog_arm.py  preview_cameras.py  train_model.py
src/grader/: __init__.py  arm.py  camera.py  classifier.py  config.py  dashboard.py  detector.py  interceptor.py  logging_utils.py  orchestrator.py  pressure.py  state_machine.py  vacuum.py
src/grader/templates/: index.html
tests/: test_classifier.py  test_detector.py  test_fusion.py  test_interceptor.py  test_state_machine.py
